dwarf_wrappers.h
@@ -190,6 +190,9 @@ int dwarf_decl_line_integrate (Dwarf_Die *die, int *linep)
 #endif // !_ELFUTILS_PREREQ(0, 143)
 
 
+// Resolve a C declaration for dwarf types
+bool dwarf_type_decl(Dwarf_Die *type_die, const std::string& var_name, std::string& decl);
+
 // Resolve a full name for dwarf types
 bool dwarf_type_name(Dwarf_Die *type_die, std::string& type_name);
 std::string dwarf_type_name(Dwarf_Die *type_die);
